[gd_scene load_steps=34 format=4 uid="uid://ctmbcws74n36g"]

[ext_resource type="Script" uid="uid://b8mfo0piai54g" path="res://player_character.gd" id="1_djgh4"]
[ext_resource type="Texture2D" uid="uid://ocqr4kaowgws" path="res://icon.svg" id="1_q4lxw"]
[ext_resource type="Texture2D" uid="uid://bvmyeae60rdfu" path="res://character-front.png" id="2_2airw"]
[ext_resource type="Texture2D" uid="uid://b751nr714abt1" path="res://characterwalksheett.png" id="3_pma7i"]
[ext_resource type="Texture2D" uid="uid://bpqyvm72st26u" path="res://acharacterjumpsheet.png" id="3_pmh5l"]
[ext_resource type="Texture2D" uid="uid://dn71oom55p031" path="res://background.png" id="5_tc213"]
[ext_resource type="Script" uid="uid://dehtj4m4sxkeg" path="res://tutorial.gd" id="6_4ykmw"]
[ext_resource type="Texture2D" uid="uid://drpxlr04kicyo" path="res://popup.png" id="6_8ddxa"]
[ext_resource type="Texture2D" uid="uid://dd3wkhja6wd0h" path="res://roadtileset.png" id="9_034xy"]
[ext_resource type="Texture2D" uid="uid://b58atblcnnf21" path="res://driveintoalampposttodriveattentaionanddamagethecar.png" id="10_sy5ve"]
[ext_resource type="Texture2D" uid="uid://boi8mwowyhgxv" path="res://trashcan.png" id="11_gl3uh"]
[ext_resource type="Texture2D" uid="uid://bcfuqv8rhfwjl" path="res://trashcont.png" id="12_1k5m0"]
[ext_resource type="Texture2D" uid="uid://bn22gsvifok7e" path="res://building.png" id="13_goqym"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_djgh4"]
size = Vector2(20, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7oqwg"]
atlas = ExtResource("3_pmh5l")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w3ynr"]
atlas = ExtResource("3_pmh5l")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0vo36"]
atlas = ExtResource("3_pmh5l")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sy5ve"]
atlas = ExtResource("3_pmh5l")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gl3uh"]
atlas = ExtResource("3_pmh5l")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1k5m0"]
atlas = ExtResource("3_pmh5l")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pmh5l"]
atlas = ExtResource("3_pma7i")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tc213"]
atlas = ExtResource("3_pma7i")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ddxa"]
atlas = ExtResource("3_pma7i")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ykmw"]
atlas = ExtResource("3_pma7i")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_034xy"]
atlas = ExtResource("3_pma7i")
region = Rect2(128, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_7oqwg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_2airw")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7oqwg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w3ynr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0vo36")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sy5ve")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gl3uh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1k5m0")
}],
"loop": false,
"name": &"jump",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pmh5l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tc213")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ddxa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ykmw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_034xy")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_2airw"]
texture = ExtResource("1_q4lxw")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:3/0 = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
3:3/0 = 0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_7oqwg"]
texture = ExtResource("9_034xy")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -264, 16, -264, 16, 16, -16, 16)
3:3/0 = 0
2:3/0 = 0
1:3/0 = 0
0:3/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_dae6g"]
texture = ExtResource("10_sy5ve")
texture_region_size = Vector2i(32, 32)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -16, 8, -16, 8, 16, -8, 16)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -16, 8, -16, 8, 16, -8, 16)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_m758t"]
texture = ExtResource("11_gl3uh")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 16, -8, 16)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_0yl4i"]
texture = ExtResource("12_1k5m0")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -8, 16, -8, 16, 16, -16, 16)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_yk7gp"]
texture = ExtResource("13_goqym")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)

[sub_resource type="TileSet" id="TileSet_pma7i"]
tile_size = Vector2i(32, 32)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_2airw")
sources/1 = SubResource("TileSetAtlasSource_7oqwg")
sources/2 = SubResource("TileSetAtlasSource_dae6g")
sources/3 = SubResource("TileSetAtlasSource_m758t")
sources/4 = SubResource("TileSetAtlasSource_0yl4i")
sources/5 = SubResource("TileSetAtlasSource_yk7gp")

[node name="Node2D" type="Node2D"]

[node name="TextureRect" type="TextureRect" parent="."]
z_index = -5
offset_left = -608.0
offset_top = -300.0
offset_right = 6208.0
offset_bottom = 980.0
texture = ExtResource("5_tc213")
stretch_mode = 1

[node name="PlayerCharacter" type="CharacterBody2D" parent="."]
z_index = 999
position = Vector2(128, 264)
script = ExtResource("1_djgh4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerCharacter"]
shape = SubResource("RectangleShape2D_djgh4")

[node name="Timer" type="Timer" parent="PlayerCharacter"]
wait_time = 0.1
one_shot = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="PlayerCharacter"]
sprite_frames = SubResource("SpriteFrames_7oqwg")
animation = &"walk"

[node name="Camera2D" type="Camera2D" parent="PlayerCharacter"]

[node name="Tutorial" type="Control" parent="PlayerCharacter/Camera2D"]
layout_mode = 3
anchors_preset = 0
offset_left = -128.0
offset_top = -264.0
offset_right = -88.0
offset_bottom = -224.0
script = ExtResource("6_4ykmw")

[node name="TextureRect" type="TextureRect" parent="PlayerCharacter/Camera2D/Tutorial"]
visible = false
z_index = 999
layout_mode = 0
offset_left = 59.0
offset_top = 128.0
offset_right = 156.0
offset_bottom = 181.0
texture = ExtResource("6_8ddxa")
expand_mode = 1

[node name="RichTextLabel" type="RichTextLabel" parent="PlayerCharacter/Camera2D/Tutorial/TextureRect"]
layout_mode = 0
offset_left = 3.0
offset_top = 3.0
offset_right = 177.0
offset_bottom = 67.0
text = "Welcome to CatSupport!"

[node name="TextureRect2" type="TextureRect" parent="PlayerCharacter/Camera2D/Tutorial"]
visible = false
z_index = 999
layout_mode = 0
offset_left = 59.0
offset_top = 128.0
offset_right = 239.0
offset_bottom = 198.0
texture = ExtResource("6_8ddxa")

[node name="RichTextLabel" type="RichTextLabel" parent="PlayerCharacter/Camera2D/Tutorial/TextureRect2"]
layout_mode = 0
offset_left = 3.0
offset_top = 3.0
offset_right = 177.0
offset_bottom = 67.0
text = "You can move with WAD / ↑←→."

[node name="TextureRect3" type="TextureRect" parent="PlayerCharacter/Camera2D/Tutorial"]
visible = false
z_index = 999
layout_mode = 0
offset_left = 59.0
offset_top = 128.0
offset_right = 239.0
offset_bottom = 198.0
texture = ExtResource("6_8ddxa")

[node name="RichTextLabel" type="RichTextLabel" parent="PlayerCharacter/Camera2D/Tutorial/TextureRect3"]
layout_mode = 0
offset_left = 3.0
offset_top = 3.0
offset_right = 177.0
offset_bottom = 67.0
text = "Holding Space/W lets you jump further."

[node name="TextureRect4" type="TextureRect" parent="PlayerCharacter/Camera2D/Tutorial"]
visible = false
z_index = 999
layout_mode = 0
offset_left = 59.0
offset_top = 128.0
offset_right = 239.0
offset_bottom = 205.0
texture = ExtResource("6_8ddxa")

[node name="RichTextLabel" type="RichTextLabel" parent="PlayerCharacter/Camera2D/Tutorial/TextureRect4"]
layout_mode = 0
offset_left = 3.0
offset_top = 3.0
offset_right = 177.0
offset_bottom = 74.0
text = "Your goal is to reach and fix radio towers. Have fun!"

[node name="TileMapLayer" type="TileMapLayer" parent="."]
position = Vector2(128, 264)
tile_map_data = PackedByteArray("AAD9/wEAAQAAAAAAAAAAAAEAAQAAAAAAAAABAAEAAQAAAAAAAAACAAEAAQAAAAAAAAADAAEAAQAAAAAAAAAEAAEAAQABAAAAAAAGAAEAAQABAAAAAAAFAAEAAQAAAAAAAAAHAAEAAQAAAAAAAAAKAAEAAQABAAAAAAALAAEAAQAAAAAAAAAMAAEAAQABAAAAAAANAAEAAQAAAAAAAAAOAAEAAQABAAAAAAD8/wEAAQABAAEAAAD7/wEAAQAAAAAAAAD+/wEAAQAAAAAAAAD//wEAAQACAAEAAAD7/wAAAQADAAEAAAD+/wIAAQABAAIAAAD7/wIAAQADAAIAAAD8/wIAAQACAAIAAAD9/wIAAQACAAIAAAD//wIAAQADAAIAAAAAAAIAAQACAAIAAAABAAIAAQABAAIAAAACAAIAAQABAAIAAAADAAIAAQACAAIAAAD7/wMAAQADAAMAAAD8/wMAAQAAAAMAAAD8/wQAAQADAAMAAAD7/wQAAQACAAMAAAD9/wMAAQACAAMAAAD+/wMAAQACAAMAAAD//wMAAQABAAMAAAD//wQAAQABAAMAAAD+/wQAAQACAAMAAAD9/wQAAQADAAMAAAD6/wQAAQAAAAMAAAD6/wMAAQABAAMAAAAAAAQAAQADAAMAAAABAAQAAQACAAMAAAABAAMAAQAAAAMAAAACAAMAAQAAAAMAAAACAAQAAQACAAMAAAAAAAMAAQADAAMAAAADAAMAAQAAAAMAAAADAAQAAQAAAAMAAAD6/wEAAQADAAAAAAD5/wEAAQADAAAAAAD4/wEAAQADAAAAAAD3/wEAAQADAAAAAAD2/wEAAQADAAAAAAD6/wIAAQABAAIAAAD5/wIAAQADAAIAAAD4/wIAAQACAAIAAAD3/wIAAQABAAIAAAD2/wIAAQAAAAIAAAD2/wMAAQAAAAMAAAD3/wMAAQABAAMAAAD4/wMAAQACAAMAAAD5/wMAAQADAAMAAAD2/wQAAQADAAMAAAD3/wQAAQABAAMAAAD4/wQAAQACAAMAAAD5/wQAAQADAAMAAAD2/wUAAQADAAMAAAD3/wUAAQABAAMAAAD4/wUAAQACAAMAAAD5/wUAAQADAAMAAAD6/wUAAQAAAAMAAAD7/wUAAQABAAMAAAD8/wUAAQACAAMAAAD9/wUAAQADAAMAAAD6/wYAAQAAAAMAAAD7/wYAAQABAAMAAAD8/wYAAQACAAMAAAD9/wYAAQADAAMAAAD6/wcAAQAAAAMAAAD7/wcAAQABAAMAAAD8/wcAAQACAAMAAAD9/wcAAQADAAMAAAD2/wcAAQADAAMAAAD3/wcAAQABAAMAAAD4/wcAAQACAAMAAAD5/wcAAQADAAMAAAD2/wYAAQADAAMAAAD3/wYAAQABAAMAAAD4/wYAAQACAAMAAAD5/wYAAQADAAMAAAD+/wYAAQAAAAMAAAD//wYAAQABAAMAAAAAAAYAAQAAAAMAAAABAAYAAQABAAMAAAD+/wUAAQAAAAMAAAD//wUAAQABAAMAAAAAAAUAAQAAAAMAAAABAAUAAQABAAMAAAD+/wcAAQAAAAMAAAD//wcAAQABAAMAAAAAAAcAAQAAAAMAAAABAAcAAQABAAMAAAACAAYAAQACAAMAAAADAAYAAQAAAAMAAAACAAUAAQACAAMAAAADAAUAAQAAAAMAAAACAAcAAQACAAMAAAADAAcAAQAAAAMAAAD1/wEAAQADAAAAAAD0/wEAAQADAAAAAADz/wEAAQADAAAAAADy/wEAAQADAAAAAADx/wEAAQADAAAAAADw/wEAAQADAAAAAADv/wEAAQADAAAAAADu/wEAAQADAAAAAADt/wEAAQADAAAAAADs/wEAAQADAAAAAADr/wEAAQADAAAAAADq/wEAAQADAAAAAADp/wEAAQADAAAAAADy/wIAAQAAAAIAAADy/wMAAQAAAAMAAADz/wIAAQABAAIAAADz/wMAAQABAAMAAAD0/wIAAQACAAIAAAD0/wMAAQACAAMAAAD1/wIAAQADAAIAAAD1/wMAAQADAAMAAADu/wIAAQAAAAIAAADu/wMAAQAAAAMAAADv/wIAAQABAAIAAADv/wMAAQABAAMAAADw/wIAAQACAAIAAADw/wMAAQACAAMAAADx/wIAAQADAAIAAADx/wMAAQADAAMAAADq/wIAAQABAAIAAADq/wMAAQABAAMAAADr/wIAAQACAAIAAADr/wMAAQACAAMAAADs/wIAAQADAAIAAADs/wMAAQADAAMAAADt/wIAAQADAAIAAADt/wMAAQADAAMAAADp/wIAAQAAAAIAAADp/wMAAQAAAAMAAADp/wQAAQAAAAMAAADq/wQAAQABAAMAAADr/wQAAQACAAMAAADs/wQAAQADAAMAAADp/wUAAQAAAAMAAADq/wUAAQABAAMAAADr/wUAAQACAAMAAADs/wUAAQADAAMAAADp/wYAAQAAAAMAAADq/wYAAQABAAMAAADr/wYAAQACAAMAAADs/wYAAQADAAMAAADt/wcAAQAAAAMAAADu/wcAAQABAAMAAADv/wcAAQACAAMAAADw/wcAAQADAAMAAADt/wYAAQAAAAMAAADu/wYAAQABAAMAAADv/wYAAQACAAMAAADw/wYAAQADAAMAAADt/wUAAQAAAAMAAADu/wUAAQABAAMAAADv/wUAAQACAAMAAADw/wUAAQADAAMAAADx/wUAAQAAAAMAAADy/wUAAQABAAMAAADz/wUAAQAAAAMAAAD0/wUAAQABAAMAAADx/wQAAQAAAAMAAADy/wQAAQABAAMAAADz/wQAAQAAAAMAAAD0/wQAAQABAAMAAADx/wYAAQAAAAMAAADy/wYAAQABAAMAAADz/wYAAQAAAAMAAAD0/wYAAQABAAMAAADp/wcAAQAAAAMAAADq/wcAAQABAAMAAADr/wcAAQACAAMAAADs/wcAAQADAAMAAADt/wQAAQAAAAMAAADu/wQAAQABAAMAAADv/wQAAQACAAMAAADw/wQAAQADAAMAAAD1/wQAAQACAAMAAAD1/wUAAQACAAMAAAD1/wYAAQACAAMAAADz/wcAAQACAAMAAAD0/wcAAQADAAMAAAD1/wcAAQACAAMAAADx/wcAAQAAAAMAAADy/wcAAQABAAMAAAAIAAEAAQABAAAAAAAJAAEAAQAAAAAAAAAEAAIAAQAAAAIAAAAEAAMAAQAAAAMAAAAFAAIAAQABAAIAAAAFAAMAAQABAAMAAAAGAAIAAQACAAIAAAAGAAMAAQACAAMAAAAHAAIAAQADAAIAAAAHAAMAAQADAAMAAAAIAAIAAQAAAAIAAAAIAAMAAQAAAAMAAAAJAAIAAQABAAIAAAAJAAMAAQABAAMAAAAKAAIAAQACAAIAAAAKAAMAAQACAAMAAAALAAIAAQADAAIAAAALAAMAAQADAAMAAAAMAAIAAQAAAAIAAAAMAAMAAQAAAAMAAAANAAIAAQABAAIAAAANAAMAAQABAAMAAAAOAAIAAQACAAIAAAAOAAMAAQACAAMAAAAEAAQAAQABAAMAAAAFAAQAAQACAAMAAAAGAAQAAQADAAMAAAAHAAQAAQAAAAMAAAAIAAQAAQABAAMAAAAJAAQAAQACAAMAAAAKAAQAAQADAAMAAAAHAAUAAQAAAAMAAAAIAAUAAQABAAMAAAAJAAUAAQACAAMAAAAKAAUAAQADAAMAAAAHAAYAAQAAAAMAAAAIAAYAAQABAAMAAAAJAAYAAQACAAMAAAAKAAYAAQADAAMAAAAEAAYAAQABAAMAAAAFAAYAAQACAAMAAAAGAAYAAQADAAMAAAAEAAUAAQABAAMAAAAFAAUAAQACAAMAAAAGAAUAAQADAAMAAAALAAQAAQAAAAMAAAAMAAQAAQABAAMAAAANAAQAAQACAAMAAAAOAAQAAQADAAMAAAALAAUAAQAAAAMAAAAMAAUAAQABAAMAAAANAAUAAQACAAMAAAAOAAUAAQADAAMAAAALAAYAAQAAAAMAAAAMAAYAAQABAAMAAAANAAYAAQACAAMAAAAOAAYAAQADAAMAAAALAAcAAQAAAAMAAAAMAAcAAQABAAMAAAANAAcAAQACAAMAAAAOAAcAAQADAAMAAAAHAAcAAQAAAAMAAAAIAAcAAQABAAMAAAAJAAcAAQACAAMAAAAKAAcAAQADAAMAAAAEAAcAAQABAAMAAAAFAAcAAQACAAMAAAAGAAcAAQADAAMAAAD8////AgAAAAEAAAD8/wAAAgAAAAIAAAABAP//AgAAAAEAAAABAAAAAgAAAAIAAAAGAP//AgAAAAEAAAAGAAAAAgAAAAIAAAALAP//AgAAAAEAAAALAAAAAgAAAAIAAAAMAAAABQAAAAIAAAANAAAABQABAAIAAAAOAAAABQACAAIAAAAMAP//BQAAAAEAAAANAP//BQABAAEAAAAOAP//BQACAAEAAAAMAP7/BQAAAAEAAAANAP7/BQABAAEAAAAOAP7/BQACAAEAAAAMAP3/BQAAAAAAAAANAP3/BQABAAAAAAAOAP3/BQACAAAAAAAIAP7/BQAAAAAAAAAIAP//BQAAAAEAAAAIAAAABQAAAAIAAAAJAP7/BQABAAAAAAAJAP//BQABAAEAAAAJAAAABQABAAIAAAAKAP7/BQACAAAAAAAKAP//BQACAAEAAAAKAAAABQACAAIAAAACAP7/BQAAAAEAAAACAP//BQAAAAEAAAACAAAABQAAAAIAAAADAP7/BQABAAEAAAADAP//BQABAAEAAAADAAAABQABAAIAAAAEAP7/BQACAAEAAAAEAP//BQACAAEAAAAEAAAABQACAAIAAAAEAP3/BQACAAAAAAAFAAAABAAAAAAAAAAAAAAAAwAAAAAAAAACAP3/BQAAAAAAAAADAP3/BQABAAAAAAA=")
tile_set = SubResource("TileSet_pma7i")

[connection signal="timeout" from="PlayerCharacter/Timer" to="PlayerCharacter" method="_on_timer_timeout"]
